# svaha_mini

./: .env  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  log_config.json  pyproject.toml  test.py  vector.toml
app/: backend_pre_start.py  consumer.py  log_config.json  main.py  main_uvicorn.py  producer.py
app/api/: __init__.py  sse_eventbus.py  ws_manager.py
app/api/endpoints/: events.py  file_manager.py  files.py  info.py  main.py  manual_levers.py  s3_test_funcs.py  session.py  session_manager.py  streaming.py  test_webui.py  upload.py  utils.py
app/api/middleware/: request_id.py
app/core/: config.py  errors.py  exceptions.py  logger.py  logging.py  openapi.py  utils.py
app/exceptions/: exceptions.py
app/models/: session.py  task.py
app/schemas/: events.py  session.py  task.py
app/services/: processing.py  redis_service.py  s3.py  s3_async.py
app/tests/core/: test_config.py  test_errors.py  test_exceptions.py
app/tests/services/: test_processing.py  test_redis_service.py
root/: prestart.sh  start-reload.sh
